fix z-index

--- a/app/styles/demo-menu/_main.scss
+++ b/app/styles/demo-menu/_main.scss
@@ -1,6 +1,6 @@
 .demo-menu {
 	position: relative;
-	z-index: $zindex-popover;
+	z-index: 99999999;
 	font-size: 16px;
 	line-height: 1.5;
   	font-family: $font-family-base;
